// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a triangle in bottom direction 1`] = `
<Triangle
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="bottom"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding=""
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="bottom"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom=""
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="bottom"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        id=""
        left=""
        location="none"
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding=""
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width=""
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom=""
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="bottom"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-jTzLTM",
                "isStatic": false,
                "lastClassName": "bWSAXN",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-jTzLTM",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height=""
          id=""
          left=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding=""
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-jTzLTM bWSAXN"
            contentEditable={false}
            direction="bottom"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in down direction 1`] = `
<Triangle
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="down"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding=""
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="down"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom=""
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="down"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        id=""
        left=""
        location="none"
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding=""
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width=""
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom=""
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="down"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-jTzLTM",
                "isStatic": false,
                "lastClassName": "duYmZL",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-jTzLTM",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height=""
          id=""
          left=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding=""
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-jTzLTM duYmZL"
            contentEditable={false}
            direction="down"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in left direction 1`] = `
<Triangle
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="left"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding=""
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="left"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom=""
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="left"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        id=""
        left=""
        location="none"
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding=""
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width=""
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom=""
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="left"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-jTzLTM",
                "isStatic": false,
                "lastClassName": "bYxlwG",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-jTzLTM",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height=""
          id=""
          left=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding=""
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-jTzLTM bYxlwG"
            contentEditable={false}
            direction="left"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in right direction 1`] = `
<Triangle
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding=""
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom=""
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        id=""
        left=""
        location="none"
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding=""
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width=""
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom=""
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-jTzLTM",
                "isStatic": false,
                "lastClassName": "bziiZZ",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-jTzLTM",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height=""
          id=""
          left=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding=""
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-jTzLTM bziiZZ"
            contentEditable={false}
            direction="right"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in top direction 1`] = `
<Triangle
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="top"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding=""
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="top"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom=""
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="top"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        id=""
        left=""
        location="none"
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding=""
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width=""
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom=""
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="top"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-jTzLTM",
                "isStatic": false,
                "lastClassName": "bWSAXN",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-jTzLTM",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height=""
          id=""
          left=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding=""
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-jTzLTM bWSAXN"
            contentEditable={false}
            direction="top"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in up direction 1`] = `
<Triangle
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="up"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding=""
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="up"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom=""
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="up"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        id=""
        left=""
        location="none"
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding=""
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width=""
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom=""
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="up"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-jTzLTM",
                "isStatic": false,
                "lastClassName": "bWSAXN",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-jTzLTM",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height=""
          id=""
          left=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding=""
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-jTzLTM bWSAXN"
            contentEditable={false}
            direction="up"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Test creation of a Triangle control 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="up"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "fill": "black",
      "stokeWidth": "2px",
      "stroke": "black",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.svg
    bottom=""
    className="ui-triangle test-class"
    contentEditable={false}
    controlled={true}
    direction="up"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    padding=""
    preserveAspectRatio="xMidYMid meet"
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "black",
        "stokeWidth": "2px",
        "stroke": "black",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    version="1.1"
    viewBox="0 0 40 40"
    visible={true}
    width=""
    xcss={null}
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="0,35, 20,10 40,35"
    />
  </styled.svg>
</Wrapper>
`;

exports[`Test retrieval of Triangle props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "up",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "nobase": false,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "Triangle",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "fill": "black",
    "stokeWidth": "2px",
    "stroke": "black",
  },
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
